Create fragments for each option, Fix some layouts, Complete key derivation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,88 +29,23 @@
                 android:layout_weight="1"/>
     </RadioGroup>
 
-    <RelativeLayout android:id="@+id/relativelayout_mainactivity_specs" android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/radiogroup_mainactivity_method">
+    <FrameLayout android:id="@+id/framelayout_mainactivity_container"
+                 android:layout_below="@id/radiogroup_mainactivity_method" android:layout_width="match_parent"
+                 android:layout_height="wrap_content">
+    </FrameLayout>
 
-        <EditText
-                android:layout_margin="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:hint="User Pin"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/edittext_mainactivity_pin"/>
+    <include android:layout_width="wrap_content" android:layout_height="wrap_content"
+             android:layout_centerInParent="true"
+             android:visibility="gone"
+             layout="@layout/fragment_notsupported"/>
 
-        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:hint="Key Alias"
-                  android:layout_margin="16dp"
-                  android:layout_alignParentStart="true"
-                  android:layout_below="@id/edittext_mainactivity_pin"
-                  android:layout_toStartOf="@id/button_mainactivity_generatekey"
-                  android:id="@+id/edittext_mainactivity_keyalias"/>
-
-        <Button android:id="@+id/button_mainactivity_generatekey" android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignBaseline="@id/edittext_mainactivity_keyalias"
-                android:layout_margin="16dp"
-                android:text="Generate Key"/>
-
-        <EditText android:id="@+id/edittext_mainactivity_plaintext" android:layout_width="match_parent"
-                  android:hint="Plain Text"
-                  android:layout_margin="16dp"
-                  android:layout_toStartOf="@id/button_mainactivity_encrypt"
-                  android:layout_below="@id/edittext_mainactivity_keyalias"
-                  android:layout_alignParentStart="true"
-                  android:layout_height="wrap_content"/>
-
-        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_alignParentEnd="true"
-                android:id="@+id/button_mainactivity_encrypt"
-                android:layout_alignBaseline="@+id/edittext_mainactivity_plaintext"
-                android:text="Encrypt"/>
-
-
-        <EditText android:id="@+id/edittext_mainactivity_ciphertext" android:layout_width="match_parent"
-                  android:hint="Cipher Text"
-                  android:layout_margin="16dp"
-                  android:layout_alignParentStart="true"
-                  android:layout_toStartOf="@id/button_mainactivity_decrypt"
-                  android:layout_below="@id/edittext_mainactivity_plaintext"
-                  android:layout_height="wrap_content"/>
-
-        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_alignParentEnd="true"
-                android:id="@+id/button_mainactivity_decrypt"
-                android:layout_alignBaseline="@+id/edittext_mainactivity_ciphertext"
-                android:text="Decrypt"/>
-
-        <TextView
-                android:id="@+id/textview_mainactivity_result"
-                android:text="TextView"
-                android:layout_margin="16dp"
-                android:textIsSelectable="true"
-                android:layout_alignParentBottom="true"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-            android:id="@+id/relativelayout_mainactivity_notsupport"
+    <TextView
+            android:id="@+id/textview_mainactivity_result"
+            android:text="Result: "
+            android:layout_margin="16dp"
+            android:textIsSelectable="true"
+            android:layout_below="@id/framelayout_mainactivity_container"
             android:layout_width="match_parent"
-            android:visibility="gone"
-            android:layout_height="match_parent">
-
-        <TextView
-                android:text="Not Supported"
-                android:layout_width="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_height="wrap_content" android:id="@+id/textview_mainactivity_notsupport"/>
-    </RelativeLayout>
-
+            android:layout_height="wrap_content"/>
 
 </RelativeLayout>
